<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@id/login_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:hint="@string/enter_login"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </LinearLayout>

            <EditText

                android:id="@+id/pass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:hint="@string/enter_password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorAccent" />
        </LinearLayout>

        <Button
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="#94f6a8"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#f3c5c6"
            android:textSize="12sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="30dp"
                android:background="#6778fc"
                android:text="@string/button"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="30dp"
                android:background="#6778fc"
                android:text="@string/button"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="30dp"
                android:background="#6778fc"
                android:text="@string/button"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="30dp"
                android:background="#6778fc"
                android:text="@string/button"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="30dp"
                android:background="#6778fc"
                android:text="@string/button"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>


    </ScrollView>

</RelativeLayout>